[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Broca/sprBroca.png" type="Texture" id=1]
[ext_resource path="res://Objects/Broca/scrBroca.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Prototype/sprInteract.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 101, 116 )

[sub_resource type="Animation" id=2]
resource_name = "anmInteract"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprInterract:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprInterract:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 0.4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprInterract:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 0.4, 1 ),
"update": 0,
"values": [ Vector2( 0, -180 ), Vector2( 0, -180 ), Vector2( 0, -257 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "anmDestroyed"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("brocaSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.345098, 0.345098, 1 ), Color( 0.945098, 0.211765, 0.211765, 1 ), Color( 1, 0.345098, 0.345098, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("brocaSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.4, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.38, 0.38 ), Vector2( 0.38, 0.4 ), Vector2( 0.38, 0.38 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("brocaSprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1.4, 1.5 ), Vector2( 1.4, 1.4 ), Vector2( 1.5, 1.4 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("brocaSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="oBroca" type="Area2D" groups=[
"Broca",
]]
script = ExtResource( 2 )

[node name="brocaColllision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -117 )
shape = SubResource( 1 )

[node name="brocaBlood" type="CPUParticles2D" parent="."]
position = Vector2( 0, -18 )
emitting = false
amount = 320
lifetime = 5.2
speed_scale = 3.0
emission_shape = 2
emission_rect_extents = Vector2( 20, 1 )
direction = Vector2( 0, -1 )
initial_velocity = 225.0
damping = 25.0
scale_amount = 8.35
scale_amount_random = 0.63
color = Color( 0.886275, 0.168627, 0.168627, 1 )

[node name="brocaSprite" type="Sprite" parent="."]
modulate = Color( 1, 0.345098, 0.345098, 1 )
position = Vector2( 6, 0 )
scale = Vector2( 0.38, 0.38 )
texture = ExtResource( 1 )
offset = Vector2( 1.19209e-07, -75.7927 )
region_enabled = true
region_rect = Rect2( 1532.46, 777.323, 341.731, 744.13 )

[node name="sprInterract" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -180 )
scale = Vector2( 0.308594, 0.308594 )
texture = ExtResource( 3 )

[node name="interactAnm" type="AnimationPlayer" parent="."]
anims/anmInteract = SubResource( 2 )

[node name="brocaAnm" type="AnimationPlayer" parent="."]
autoplay = "anmIdle"
playback_speed = 1.3
anims/anmDestroyed = SubResource( 3 )
anims/anmIdle = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_oPC_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_oPC_body_exited"]
